game history for player
